2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/deb/amanda-backup-client.install,
	  packaging/deb/amanda-backup-server.install: Add etc/amanda/*

2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/catalogs/dumper-tryagain.cat: Typo

2016-04-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Remove multiple output line.
	* server-src/driver.c: Fix after a TRY-AGAIN
	* installcheck/Makefile.am: Add catalogs/dumper-tryagain.cat
	* installcheck/amreport.pl: Add check for dumper-tryagain.cat
	* installcheck/catalogs/dumper-tryagain.cat: New test case

2016-04-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/tape-device.c: improve error message on write fail

2016-04-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c: Remove for startq

2016-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: use bsdtar_realpath, remove an amfree()

2016-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/syshacks.m4: accept *-apple-darwin*

2016-03-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* recover-src/extract_list.c: Use property from header instead of from
	  disklist

2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c (do_directtcp_accept): Increase timeout to
	  840

2016-03-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Scan/lexical.pm,
	  perl/Amanda/Taper/Scan/oldest.pm: A no-reuse is not a new labelled
	  tape
	* installcheck/Amanda_Taper_Scan_lexical.pl,
	  installcheck/Amanda_Taper_Scan_oldest.pl,
	  installcheck/Amanda_Taper_Scan_traditional.pl: Add check

2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix for last dle span two tapes

2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Micheal Burk
	* perl/Amanda/Report/json.pm: fixup
